# bitethejaw

./: README.md  pyproject.toml
backend/: permissions.py  settings.py  urls.py
submissions/: admin.py  models.py  serializers.py  urls.py  views.py
submissions/migrations/: 0001_initial.py  0002_alter_submissions_category.py  0002_alter_submissions_submitted_by.py  0003_alter_submissions_category.py  0003_alter_submissions_date_submitted.py  0004_alter_submissions_date_submitted.py  0004_alter_submissions_image.py  0005_alter_submissions_date_submitted.py  0006_alter_submissions_submitted_by.py  0007_alter_submissions_submitted_by.py  0008_submissions_title.py  0009_alter_submissions_category_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_email_user_password.py  0003_user_bio.py  0004_alter_user_bio.py  0005_user_display_pic_alter_user_bio.py  0006_rename_display_pic_user_display_picture.py  0007_user_date_joined.py  0008_remove_user_date_joined.py  0009_alter_user_options_alter_user_managers_and_more.py  0010_alter_user_date_joined.py  0011_alter_user_display_picture.py  0012_remove_user_submissions.py  0013_alter_user_bio.py
